--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.5",
     "plyr": "^3.6.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
