--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "@tailwindcss/forms": "^0.3.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.5",
