--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "module": "es2015",
+        "moduleResolution": "node",
         "baseUrl": "./",
         "jsx": "react",
         "paths": {
